production-homelab/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: docker.io/janne808/rfr-api:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000
              name: api
      imagePullSecrets:
        - name: janne808-regcred
