production-homelab/liquidsoap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liquidsoap-deployment
  labels:
    app: liquidsoap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liquidsoap
  template:
    metadata:
      labels:
        app: liquidsoap
    spec:
      containers:
        - name: liquidsoap
          image: docker.io/janne808/rfr-liquidsoap:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: sc
              mountPath: /sc
            - name: music
              mountPath: /music
            - name: liquidsoap-config
              mountPath: /etc/liquidsoap/script.liq
              subPath: freerobotron.liq
      imagePullSecrets:
        - name: janne808-regcred
      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: music 
        - name: sc
          emptyDir: {}
        - name: liquidsoap-config
          configMap:
            name: liquidsoap-config
      securityContext:
        readOnlyFileSystem: true
        runAsNonRoot: true
