production-homelab/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongodb
          image: docker.io/mongo:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: mongodata
              mountPath: /data/db
          ports:
            - containerPort: 27017
              name: mongodb
  volumeClaimTemplates:
    - metadata:
        name: mongodata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: "16Gi"
