production-homelab/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: web-root-sync
          image: k8s.gcr.io/git-sync:v3.1.6
          volumeMounts:
          - name: nginx-www-root
            mountPath: /tmp/git/app
          - name: k8s-deploy-key
            mountPath: /etc/git-secret
            readOnly: true
        - name: nginx
          image: nginx:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: nginx-www-root
              mountPath: /app
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/rfr.conf
              subPath: rfr.conf
            - name: nginx-config
              mountPath: /app/index.html
              subPath: index.html
          ports:
            - containerPort: 8000
              name: nginx
      imagePullSecrets:
        - name: janne808-regcred
      volumes:
        - name: nginx-www-root
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: k8s-deploy-key
          secret:
            secretName: k8s-deploy-key
