production-homelab/nginx-php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-php-deployment
  labels:
    app: nginx-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-php
  template:
    metadata:
      labels:
        app: nginx-php
    spec:
      containers:
        - name: phpfpm
          image: docker.io/janne808/rfr-php:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: shared-www-root
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /app/index.php
              subPath: index.php
          # copy /app to shared nginx container webroot at /var/www/html
          # (for some reason php-fpm and nginx can't share the same path for this)
          lifecycle:
            postStart:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - >
                    cp -r /app/. /var/www/html
        - name: nginx
          image: nginx:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: shared-www-root
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/rfr.conf
              subPath: rfr.conf
          ports:
            - containerPort: 8000
              name: nginx-php
      imagePullSecrets:
        - name: janne808-regcred
      volumes:
        - name: shared-www-root
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
