production-homelab/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - name: api
      protocol: TCP
      port: 8000
      targetPort: api
