production-homelab/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: mongodb
