production-homelab/api-traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-https-server
  namespace: radiofreerobotron
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: (Host(`radiofreerobotron.home.arpa`) || Host(`www.radiofreerobotron.home.arpa`)) && PathPrefix(`/api/`)  
      priority: 10
      services:
        - name: api
          port: 8000
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-http-server
  namespace: radiofreerobotron
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`radiofreerobotron.home.arpa`) || Host(`www.radiofreerobotron.home.arpa`) && PathPrefix(`/api/`)
      priority: 10
      services:
        - name: api
          port: 8000
      middlewares:
        - name: radiofreerobotron-redirectscheme
