production-homelab/icecast2-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: icecast2
  namespace: radiofreerobotron
spec:
  entryPoints:
    web:
      address: ':80'
    websecure:
      address: ':443'
  routes:
    - kind: Rule
      match: Host(`icecast.radiofreerobotron.home.arpa`)
      priority: 10
      services:
        - name: icecast2
          port: 8000
  tls:
    certResolver: default
