production-homelab/icecast2-traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: icecast2-https-server
  namespace: radiofreerobotron
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`icecast.radiofreerobotron.home.arpa`)
      priority: 10
      services:
        - name: icecast2
          port: 8000
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: icecast2-http-server
  namespace: radiofreerobotron
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`icecast.radiofreerobotron.home.arpa`)
      priority: 10
      services:
        - name: icecast2
          port: 8000
      middlewares:
        - name: radiofreerobotron-redirectscheme
