production-homelab/nginx-traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-php-https-server
  namespace: radiofreerobotron
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radiofreerobotron.home.arpa`) || Host(`www.radiofreerobotron.home.arpa`)  
      priority: 10
      services:
        - name: nginx-php
          port: 8000
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-php-http-server
  namespace: radiofreerobotron
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`radiofreerobotron.home.arpa`) || Host(`www.radiofreerobotron.home.arpa`)
      priority: 10
      services:
        - name: nginx-php
          port: 8000
      middlewares:
        - name: radiofreerobotron-redirectscheme
